deployment/kubernetes/dev/log-message-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-message-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-message-processor
  template:
    metadata:
      labels:
        app: log-message-processor
    spec:
      containers:
      - name: log-message-processor
        image: $(ACR_NAME)/log-message-processor:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: log-message-processor
spec:
  type: ClusterIP
  selector:
    app: log-message-processor
  ports:
  - port: 5000
    targetPort: 5000
