deployment/kubernetes/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /auth-api
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  number: 8080
          - path: /users-api
            pathType: Prefix
            backend:
              service:
                name: users-api
                port:
                  number: 8083
          - path: /todos-api
            pathType: Prefix
            backend:
              service:
                name: todos-api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
